[gd_scene load_steps=4 format=3 uid="uid://cg61bstlcuis"]

[ext_resource type="Texture2D" uid="uid://dmlcl6voqf58i" path="res://Assets/Bullet.png" id="1_uoemq"]
[ext_resource type="Script" path="res://Scripts/bullet.gd" id="1_x4e3i"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ysb71"]
size = Vector2(66, 34)

[node name="Bullet" type="Area2D"]
z_index = 1
scale = Vector2(0.4, 0.28)
priority = 1
script = ExtResource("1_x4e3i")
speed = 3000.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ysb71")
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_uoemq")
metadata/_edit_lock_ = true

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
metadata/_edit_lock_ = true

[connection signal="area_entered" from="." to="." method="_on_Bullet_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_exit_screen"]
